Style projects section and few bug fixes - Add project info placeholder - Add positioning to project info - Fix about me section bug where it is not aligned on certain screen size. - Remove width from story and project sections then add more padding to align all containers.

--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,9 @@ html {
 body {
   box-sizing: border-box;
   background-color: #fff; }
-  @media only screen and (max-width: 75em) {
-    body {
-      padding: 3rem 0; } }
 
 .main-body {
-  padding: 3rem 12rem; }
+  padding: 3rem 20rem; }
 
 body {
   font-family: "lato", sans-serif;
@@ -43,6 +40,9 @@ body {
   /* font-size: 16px;  */
   line-height: 1.7;
   color: #0E171B; }
+
+p {
+  font-size: 1.6rem; }
 
 .header-text {
   width: 100%;
@@ -187,24 +187,17 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap; }
-    @media only screen and (max-width: 56.25em) {
-      .projects__row {
-        flex-direction: column; } }
     .projects__row-col-1-of-3 {
       box-shadow: 5px 5px 1.2rem #999b9b46;
       border-radius: 6px;
-      width: 150rem;
       margin-bottom: 8rem;
       border-radius: 8px;
       display: flex; }
-      @media only screen and (max-width: 56.25em) {
-        .projects__row-col-1-of-3 {
-          margin-bottom: 3rem;
-          display: flex;
-          flex-direction: column;
-          align-items: center; } }
   .projects__content-container {
-    width: 45%; }
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
   .projects__header {
     text-align: center;
     margin-bottom: 2rem; }
@@ -218,12 +211,7 @@ body {
     background-color: #FDF6ED;
     text-align: center;
     border-radius: 10rem;
-    width: 20rem;
-    margin: 0 auto; }
-    @media only screen and (max-width: 56.25em) {
-      .projects__link-container {
-        height: auto;
-        width: 40rem; } }
+    width: 20rem; }
   .projects__link {
     color: #2A9D8F;
     font-size: 1.6rem;
@@ -235,34 +223,16 @@ body {
   border-radius: 8px;
   box-shadow: 3px 3px 10px #999b9b46;
   padding: 4rem 0;
-  width: 150rem;
   margin: 0 auto;
   margin-bottom: 8rem;
   display: flex;
   flex-direction: column;
   justify-content: center; }
-  @media only screen and (max-width: 75em) {
-    .story > .row {
-      display: flex;
-      flex-direction: column;
-      align-items: center; } }
   .story > .row > .col-1-of-2 {
     height: 30rem; }
-    @media only screen and (max-width: 75em) {
-      .story > .row > .col-1-of-2 {
-        height: 40rem;
-        margin: 0;
-        padding: 2rem; } }
-  @media only screen and (max-width: 75em) {
-    .story > .row > :last-child {
-      width: 70%; } }
   .story__pic {
     max-height: 100%;
     max-width: 100%;
     border-radius: 8px; }
   .story__content {
     padding-left: 6rem; }
-    @media only screen and (max-width: 75em) {
-      .story__content {
-        padding-left: 0;
-        text-align: center; } }
