--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,6 +6,10 @@ body {
   color: $color-black;
 }
 
+p {
+  font-size: 1.6rem;
+}
+
 .header-text {
   width: 100%;
   font-size: 3rem;
