--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -9,30 +9,20 @@
         justify-content: center;
         flex-wrap: wrap;
 
-        @include respond(tab-port) {
-            flex-direction: column;
-        }
-
         &-col-1-of-3 {
             box-shadow: 5px 5px 1.2rem $color-grey;
             border-radius: 6px;
-            width: 150rem;
             margin-bottom: 8rem;
             border-radius: 8px;
             display: flex;
-
-            @include respond(tab-port) {
-                margin-bottom: 3rem;
-
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
         }
     }
 
     &__content-container {
         width: 45%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     &__header {
@@ -53,12 +43,6 @@
         text-align: center;
         border-radius: 10rem;
         width: 20rem;
-        margin: 0 auto;
-
-        @include respond(tab-port) {
-            height: auto;
-            width: 40rem;
-        }
     }
 
     &__link {
