--- a/sass/layout/_story.scss
+++ b/sass/layout/_story.scss
@@ -3,7 +3,6 @@
     border-radius: 8px;
     box-shadow: 3px 3px 10px $color-grey;
     padding: 4rem 0;
-    width: 150rem;
     margin: 0 auto;
     margin-bottom: 8rem;
     display: flex;
@@ -11,26 +10,9 @@
     justify-content: center;
 
     & > .row {
-        @include respond(tab-land) {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
 
         & > .col-1-of-2 {
             height: 30rem;
-
-            @include respond(tab-land) {
-                height: 40rem;
-                margin: 0;
-                padding: 2rem;
-            }
-        }
-
-        & > :last-child {
-            @include respond(tab-land) {
-                width: 70%;
-            }
         }
     }
 
@@ -42,11 +24,6 @@
 
     &__content {
         padding-left: 6rem;
-
-        @include respond(tab-land) {
-            padding-left: 0;
-            text-align: center;
-        }
     }
 
 }
